Fixed header alignment using flexbox

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,19 +1,27 @@
 .header  {
-  font-family: monospace;
+  font-family: Arial, Helvetica, sans-serif;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
 }
 
 .logo {
   font-size: 48px;
   font-weight: 900;
   color: tomato;
-  background: white;
-  padding: 4px 32px;
+  background: black;
+  padding: 4px 62px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  margin: 0; /* this deals with ul default margin/padding */
+  padding: 0;
+  gap: 20px;
 }
 
 a {
@@ -23,3 +31,4 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
